# parla

./: .gitignore  Makefile  README.md  autogen.sh  build.sh  meson.build  run-debug.sh
.github/workflows/: build.yml  ci.yml  release.yml
data/: io.github.trufae.Parla.desktop  org.deltachat.Gnome.desktop  style.css
src/: account_creation.vala  account_finder.vala  application.vala  chat_context_menu.vala  chat_info_dialog.vala  chat_row.vala  compose_bar.vala  config.vala.in  contact_picker_dialog.vala  conversation_view.vala  event_handler.vala  image_viewer.vala  main.vala  markdown.vala  message_actions.vala  message_row.vala  models.vala  new_group_dialog.vala  pinned_messages_manager.vala  profile_dialog.vala  quick_switch_dialog.vala  relay_picker.vala  rpc_client.vala  settings_dialog.vala  settings_manager.vala  store.vala  window.vala
